syntax = "proto2";

package gate;


enum ErrCode {
    SUCCESS = 0;                // 成功
    UNKNOW = 1;                 // 未知错误

    ERR_INVALID_TOKEN = 101;    // 无效的 token
    ERR_EXPIRE_TOKEN = 102;     // token 已经过期
    ERR_ALREADY_AUTHED = 103;   // 已经认证过了
}

// GateAuthReq 网关认证请求
message GateAuthReq {
    optional uint64 player_id = 1;  // 玩家 ID 
    // ...
    optional int64 expire = 14; // 认证到期时间
    optional string token = 15; // token 
}

// GateAuthRsp 网关认证应答
message GateAuthRsp {
    optional ErrCode err_code = 1;  // 错误码
}

// GateHeartBeatReq 心跳检测请求
message GateHeartBeatReq {
    optional uint32 reserve = 1;    // 保留
}

// GateHeartBeatRsp 心跳检测应答
message GateHeartBeatRsp {
    optional uint32 reserve = 2;    // 保留
}